force-app/main/default/objects/KPI_Target__mdt/KPI_Target__mdt.object-meta.xml
<CustomObject>
    <label>KPI 목표</label>
    <pluralLabel>KPI 목표</pluralLabel>
</CustomObject>