force-app/main/default/objects/KPI_Target__mdt/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <inlineHelpText>분기 키. 예: 2026-Q3</inlineHelpText>
    <label>기간</label>
    <length>10</length>
    <type>Text</type>
</CustomField>