force-app/main/default/objects/KPI_Target__mdt/fields/Target_Fee__c.field-meta.xml
<CustomField>
    <fullName>Target_Fee__c</fullName>
    <inlineHelpText>분기 수수료 수익 목표(원)</inlineHelpText>
    <label>목표 수수료</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>