force-app/main/default/objects/KPI_Target__mdt/fields/Target_New_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Target_New_Accounts__c</fullName>
    <inlineHelpText>분기 신규 고객사 발굴 목표 건수</inlineHelpText>
    <label>목표 신규 발굴</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>